TBD - 1.0.0
TODO: When exporting a LoTW log, the number of QSOs is not correct. It shows the full log, not just the exported.
TODO: The filename must containthe date to prevent one very big file - DX-Cluster: It is now possible to save in a file all the DX-Cluster activity.
TODO: New feature: Integrate TQSL to upload QSOs to LoTW directly from KLog.
TODO: New feature: KLog can now control a rotator through PSTRotator.
TODO: UI: Added a DXCC summary obtained from the Tools menu.
- UI: Removed the first column inthe DXCC widget to make it more user friendly.
- UI: Created a widget to manage the Main QSO entry to make KLog more modular.
- UI: eQSL & LoTW are marked as queued to be sent by default if the user activates it in the setup.
- UI: Added the title to some QMessage boxes that were missing.
- New feature: You can check a call in QRZ.com by right-clicking in the call from the log.
- New feature: You can check a call in DXHeat.com by right-clicking in the call from the log.
- Improvement: Added https to the cty.dat download.
- Improvement: Added the https to download.klog.xyz
- Improvement: Propagation modes are now sorted in the Propagation mode combobox.
- Improvement: Three new tips added.
- Improvement: eQSL & LoTW dates are updated always that are modified to any status.
- Improvement: If a QSO does not have a freq, a default freq based on the band is assigned if editted.
- Removed one console message about a duplicated database connection.
- Bugfix: In translated instances of KLog, Propagation mode was sometimes not properly saved when no propagation mode eas selected.
- BugFix: Locator in SAT widget was not always not correctly evaluated as correct.

February 2020 - 0.9.9.1
- BugFix: Bands & modes where sometimes duplicated in the combobox (TNX G4MKT).

January 2020 - 0.9.9
- UI: Created a widget to manage the Awards to make KLog more modular.
- UI: When starting a new version for the first time, the splashscreen is not hidding other messages anymore.